--- a/projects/amen/views/mapping/index.html
+++ b/projects/amen/views/mapping/index.html
@@ -130,6 +130,16 @@
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
               </li>
+              <li id="yale-medical-center-caregiver-assignment-assignment-id-field"><span class="field">Assignment ID</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-caregiver-assignment-timestamp-field"><span class="field">Timestamp</span><span class="element"><code>MSH.7</code></span><span class="preview">20201001091354-0400</span></li>
+              <li id="yale-medical-center-caregiver-assignment-patient-id-field"><span class="field">Patient ID</span><span class="element"><code>PID.2</code></span><span class="preview">E00000329</span></li>
+              <li id="yale-medical-center-caregiver-assignment-location-id-field"><span class="field">Location ID</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-caregiver-assignment-caregiver-id-field"><span class="field">Caregiver ID</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-caregiver-assignment-assignment-level-field"><span class="field">Assignment Level</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-caregiver-assignment-assigned-role-field"><span class="field">Assigned Role</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-caregiver-assignment-start-date-field"><span class="field">Start Date</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-caregiver-assignment-end-date-field"><span class="field">End Date</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-caregiver-assignment-status-field"><span class="field">Status</span><span class="element"><code></code></span><span class="preview"></span></li>
             </ul>
           </div>
           <div id="yale-medical-center-patient-update-entity" class="card entity column-12">
