--- a/projects/amen/views/mapping/template/index.html
+++ b/projects/amen/views/mapping/template/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1">
-  <title>AMEN Lab Results Mapping Skunk Works | TigerConnect</title>
+  <title>AMEN  Mapping Skunk Works | TigerConnect</title>
   <base href="../../../">
   <!-- css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -41,21 +41,18 @@
   </header>
   <main>
     <article>
-      <h1>Yale Medical Center INT-1 </h1>
+      <h1>Yale Medical Center INT-1 Patient</h1>
       <section>
         <h2>Edit Active Fields</h2>
         <div class="row cards">
-          <div class="card mapping-group">
-            <h3 class="visuallyhidden">Control Fields</h3>
-            <form id="yale-medical-center-fields">
-              <div class="group">
-                
-              </div>
+          <div class="card" style="width: 100%;">
+            <form class="mapping-groups">
+              
             </form>
             <div class="button-group right">
               <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
               <button class="secondary">Cancel</button>
-              <button class="primary">Save</button>
+              <a href="javascript:window.history.back();" class="button primary">Save</a>
             </div>
           </div>
         </div>
