AMEN added Patient Update scripts

--- a/projects/amen/views/mapping/index.html
+++ b/projects/amen/views/mapping/index.html
@@ -150,6 +150,11 @@
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
               </li>
+              <li id="yale-medical-center-patient-update-patient-id-field"><span class="field">Patient ID</span><span class="element"><code>PID.2</code></span><span class="preview">E00000329</span></li>
+              <li id="yale-medical-center-patient-update-timestamp-field"><span class="field">Timestamp</span><span class="element"><code>MSH.7</code></span><span class="preview">20201001091354-0400</span></li>
+              <li id="yale-medical-center-patient-update-event-type-field"><span class="field">Event Type</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-patient-update-previous-location-id-field"><span class="field">Previous Location ID</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-patient-update-current-location-id-field"><span class="field">Current Location ID</span><span class="element"><code></code></span><span class="preview"></span></li>
             </ul>
           </div>
           <div id="yale-medical-center-order-request-entity" class="card entity column-12">
