--- a/projects/amen/views/mapping/patient-update/index.html
+++ b/projects/amen/views/mapping/patient-update/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1">
-  <title>AMEN Lab Results Mapping Skunk Works | TigerConnect</title>
+  <title>AMEN Patient Update Mapping Skunk Works | TigerConnect</title>
   <base href="../../../">
   <!-- css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -41,47 +41,19 @@
   </header>
   <main>
     <article>
-      <h1>Yale Medical Center INT-1 Patient Update</h1>
+      <h1>Yale Medical Center INT-1 Patient</h1>
       <section>
         <h2>Edit Active Fields</h2>
         <div class="row cards">
-          <div class="card">
-            <h3>Control Fields</h3>
-            <!-- <div class="button-group right">
-              <button class="tertiary">All</button>
-              <button class="tertiary">None</button>
-            </div> -->
-            <form id="yale-medical-center-patient-update">
-              <fieldset class="toggle checklist">
-                <!-- <legend>Patient Update</legend> -->
-                <label for='yale-medical-center-patient-update-patient-id'>Patient ID - reference to Patient
-                  entity<input type='checkbox' id='yale-medical-center-patient-update-patient-id' class='toggle'
-                    name='yale-medical-center-patient-update-patient-id'
-                    title='Patient ID - reference to Patient entity'
-                    value='Patient ID - reference to Patient entity'></label>
-                <label for='yale-medical-center-patient-update-timestamp'>Timestamp<input type='checkbox'
-                    id='yale-medical-center-patient-update-timestamp' class='toggle'
-                    name='yale-medical-center-patient-update-timestamp' title='Timestamp' value='Timestamp'></label>
-                <label for='yale-medical-center-patient-update-event-type'>Event Type (A01, A02, A03, etc.)<input
-                    type='checkbox' id='yale-medical-center-patient-update-event-type' class='toggle'
-                    name='yale-medical-center-patient-update-event-type' title='Event Type (A01, A02, A03, etc.)'
-                    value='Event Type (A01, A02, A03, etc.)'></label>
-                <label for='yale-medical-center-patient-update-previous-location-id'>Previous Location ID - reference to
-                  Location entity<input type='checkbox' id='yale-medical-center-patient-update-previous-location-id'
-                    class='toggle' name='yale-medical-center-patient-update-previous-location-id'
-                    title='Previous Location ID - reference to Location entity'
-                    value='Previous Location ID - reference to Location entity'></label>
-                <label for='yale-medical-center-patient-update-current-location-id'>Current Location ID - reference to
-                  Location entity<input type='checkbox' id='yale-medical-center-patient-update-current-location-id'
-                    class='toggle' name='yale-medical-center-patient-update-current-location-id'
-                    title='Current Location ID - reference to Location entity'
-                    value='Current Location ID - reference to Location entity'></label>
-              </fieldset>
+          <div class="card" style="width: 100%;">
+            <form class="mapping-groups">
+              <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-patient-update-patient-id-field">Patient ID<input type="checkbox" id="yale-medical-center-patient-update-patient-id-field" class="toggle" name="yale-medical-center-patient-update-patient-id-field" title="Patient ID" value="Patient ID"></label></fieldset><fieldset class="small"><label for="yale-medical-center-patient-update-patient-id-field">Patient ID element</label><input type="text" id="yale-medical-center-patient-update-patient-id-field-element" name="yale-medical-center-patient-update-patient-id-field" value="PID.2"></fieldset><div id="yale-medical-center-patient-update-patient-id-field-preview" class="preview"><span class="label">Preview</span><p>E00000329</p></div></div>
+              <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-patient-update-timestamp-field">Timestamp<input type="checkbox" id="yale-medical-center-patient-update-timestamp-field" class="toggle" name="yale-medical-center-patient-update-timestamp-field" title="Timestamp" value="Timestamp"></label></fieldset><fieldset class="small"><label for="yale-medical-center-patient-update-timestamp-field">Timestamp element</label><input type="text" id="yale-medical-center-patient-update-timestamp-field-element" name="yale-medical-center-patient-update-timestamp-field" value="MSH.7"></fieldset><div id="yale-medical-center-patient-update-timestamp-field-preview" class="preview"><span class="label">Preview</span><p>20201001091354-0400</p></div></div>
             </form>
             <div class="button-group right">
               <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
               <button class="secondary">Cancel</button>
-              <button class="primary">Save</button>
+              <a href="javascript:window.history.back();" class="button primary">Save</a>
             </div>
           </div>
         </div>
