AMEN added some more field scripts

--- a/projects/amen/views/mapping/index.html
+++ b/projects/amen/views/mapping/index.html
@@ -165,6 +165,22 @@
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
               </li>
+              <li id="yale-medical-center-order-request-order-id-field"><span class="field">Order ID</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-order-request-observation-timestamp-field"><span class="field">Observation Timestamp</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-order-request-transaction-timestamp-field"><span class="field">Transaction Timestamp</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-order-request-filler-number-field"><span class="field">Filler Number</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-order-request-order-control-field"><span class="field">Order Control</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-order-request-order-status-field"><span class="field">Order Status</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-order-request-result-status-field"><span class="field">Result Status</span><span class="element"><code>OBR.25</code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-order-request-priority-field"><span class="field">Priority</span><span class="element"><code>OBR.5</code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-order-request-placer-order-number-field"><span class="field">Placer Order Number</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-order-request-clinical-information-field"><span class="field">Clinical Information</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-order-request-universal-service-id-field"><span class="field">Universal Service ID</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-order-request-notes-field"><span class="field">Notes</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-order-request-ordering-provider-id-field"><span class="field">Ordering Provider ID</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-order-request-responsible-provider-id-field"><span class="field">Responsible Provider ID</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-order-request-patient-id-field"><span class="field">Patient ID</span><span class="element"><code>PID.2</code></span><span class="preview">E00000329</span></li>
+              <li id="yale-medical-center-order-request-location-id-field"><span class="field">Location ID</span><span class="element"><code></code></span><span class="preview"></span></li>
             </ul>
           </div>
           <div id="yale-medical-center-lab-result-entity" class="card entity column-12">
