AMEN added raw message data to all field pages

--- a/projects/amen/views/mapping/template/index.html
+++ b/projects/amen/views/mapping/template/index.html
@@ -56,6 +56,25 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="column-12">
+            <h2>Raw Data</h2>
+            <pre>
+MSH|^~\&|LAB|NMC|||20201001091354-0400||ORU^R01|22064.1|D|2.3|
+PID|1|E00000329|M000000350||BLUEAPPLE^TOM||19711221|F||W|123 MAIN STREET^^SAINT ALBANS^VT^05478|||||S||V00000019513|
+PV1|1519|O|ICU^101^A|EL|||ZFINGJU^Fingergut^Judy^^^^MD|||||||PHY||||CLI|||||||||||||||||||||NMC||REG|||202010010910|
+OBR|1|1789^LAB|1789^LAB|PT^HEPARIN/INR^L|||202010010912|||||||202010010912||ZFINGJU^Zfingergut^Judy^^^^MD||||||||LAB|F||^^^^^R|BARNMI^Barnum^Michael^J.^^^MD|
+OBX|1|ST|PRO^HEPARIN^L|1|12.0|SECONDS|9.6-11.2|H||A^S|F|||202010010913|ML^MAIN LAB^L|
+NTE|1||Is patient on anticoagulant? N|
+OBX|2|ST|INR^INR^L|1|1.2||2.0-3.0|L||A^S|F|||202010010913|ML^MAIN LAB^L|
+NTE|2||INR value valid only on patients on stabilized warfarin|
+NTE|3||therapy.  The recommended therapeutic range for warfarin|
+NTE|4||(Coumadin) for most clinical indications is an INR of|
+NTE|5||2.0-3.0.  An INR of 2.5-3.5 is recommended for patients with|
+NTE|6||mechanical heart valves.|
+          </pre>
+          </div>
+        </div>
       </section>
     </article>
   </main>
