Updated tertiary button margin-right
Also updated AMEN dashboard card button links with links to edit entities and edit mapping

--- a/projects/amen/style/amen.css
+++ b/projects/amen/style/amen.css
@@ -1605,6 +1605,7 @@ a.button.secondary:focus {
 button.tertiary,
 .button.tertiary,
 a.button.tertiary {
+  margin-right: var(--spacing--16);
   padding: 0;
   border: none;
   color: var(--color--action-light);
