--- a/projects/amen/views/dashboard/index.html
+++ b/projects/amen/views/dashboard/index.html
@@ -343,9 +343,17 @@
                 </span>
               </li>
             </ul>
-            <div class="button-group center">
+            <!-- <div class="button-group center">
               <a href="views/mapping/index.html" class="button">Edit Mapping</a>
+            </div> -->
+            <div class="button-group">
+              <a href="views/mapping/entities/index.html" class="button tertiary">Edit Entities</a>
+              <a href="views/mapping/index.html" class="button tertiary">Edit Mapping</a>
             </div>
+            <!-- <ul class="options">
+              <li class="show">Entities<span class="action"><a href="views/mapping/entities/index.html" class="button tertiary">Edit</a></span></li>
+              <li class="show">Mapping<span class="action"><a href="views/mapping/index.html" class="button tertiary">Edit</a></span></li>
+            </ul> -->
           </div>
         </div>
       </section>
