--- a/style/_scss/_buttons.scss
+++ b/style/_scss/_buttons.scss
@@ -45,6 +45,7 @@ a.button.secondary {
 button.tertiary,
 .button.tertiary,
 a.button.tertiary {
+  margin-right: $spacing-16;
   padding: 0;
   border: none;
   color: $color--action-light;
