--- a/projects/amen/views/mapping/template/index.html
+++ b/projects/amen/views/mapping/template/index.html
@@ -61,7 +61,7 @@
             <h2>Raw Data</h2>
             <pre>
 MSH|^~\&|LAB|NMC|||20201001091354-0400||ORU^R01|22064.1|D|2.3|
-PID|1|E00000329|M000000350||BLUEAPPLE^TOM||19711221|F||W|123 MAIN STREET^^SAINT ALBANS^VT^05478|||||S||V00000019513|
+PID|1|E00000329|M000000350||BLUEAPPLE^TOM||19711221|M||W|123 MAIN STREET^^SAINT ALBANS^VT^05478|||||S||V00000019513|
 PV1|1519|O|ICU^101^A|EL|||ZFINGJU^Fingergut^Judy^^^^MD|||||||PHY||||CLI|||||||||||||||||||||NMC||REG|||202010010910|
 OBR|1|1789^LAB|1789^LAB|PT^HEPARIN/INR^L|||202010010912|||||||202010010912||ZFINGJU^Zfingergut^Judy^^^^MD||||||||LAB|F||^^^^^R|BARNMI^Barnum^Michael^J.^^^MD|
 OBX|1|ST|PRO^HEPARIN^L|1|12.0|SECONDS|9.6-11.2|H||A^S|F|||202010010913|ML^MAIN LAB^L|
